--- a/academy-feign/src/main/resources/application.yml
+++ b/academy-feign/src/main/resources/application.yml
@@ -11,3 +11,16 @@ Spring:
       cluster-nodes: localhost:9300
       repositories:
         enabled: true
+  rabbitmq:
+    password: guest
+    username: guest
+    host: 192.168.101.173
+    port: 5672
+  redis:
+    host: localhost
+    port: 6379
+    jedis:
+      pool:
+        max-idle: 300
+        max-active: 600
+    thymeleaf: content-type=text/html
