实训二个人项目第三次提交

--- a/academy-feign/src/main/resources/application.yml
+++ b/academy-feign/src/main/resources/application.yml
@@ -24,3 +24,5 @@ Spring:
         max-idle: 300
         max-active: 600
     thymeleaf: content-type=text/html
+  mongodb:
+    uri: mongodb://name:password@//localhost:27017/test
